[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.45.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "networkx>=3.4.2",
    "jinja2>=3.1.6",
]
